import {withA11y} from '@storybook/addon-a11y';
import {text, withKnobs} from '@storybook/addon-knobs';
import {storiesOf} from '@storybook/vue';
import Vue from 'vue';
import {componentsHierarchyRootSeparator} from '../../../conf/storybook/utils';
import {RADIO_NAME} from '../component-names';
import RadioPlugin from "./radio";

Vue.use(RadioPlugin);


declare module '@storybook/addon-knobs' {
    export function withKnobs(): any;
}


storiesOf(`${componentsHierarchyRootSeparator}${RADIO_NAME}`, module)
    .addDecorator(withA11y)
    .addDecorator(withKnobs)
    .add('default', () => ({
        props: {
            text: {
                default: text('Text', 'A Radio')
            }
        },
        template: '<m-radio>{{ text }}</m-radio>'
    }))
    .add('value', () => ({
        template: '<m-radio value="radio">A Radio</m-radio>'
    }))
    .add('name', () => ({
        template: '<m-radio name="super radio">A Radio</m-radio>'
    }))
    .add('label', () => ({
        template: '<m-radio label="radio label">A Radio</m-radio>'
    }))
    .add('disabled', () => ({
        template: '<m-radio :disabled="true">A Radio</m-radio>'
    }))
    .add('radioPosition', () => ({
        template: '<m-radio radioPosition="right">A Radio</m-radio>'
    }))
    .add('radioVerticalAlign', () => ({
        template: '<m-radio radioVerticalAlign="center">A Radio</m-radio>'
    }));
